feat: 2-feature-kcl-integration-for-module-execution-and-parameter-injection

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,6 +3,8 @@ version: 3
 includes:
   git:
     taskfile: https://raw.githubusercontent.com/stuttgart-things/tasks/refs/heads/main/git/git.yaml
+  lint:
+    taskfile: https://raw.githubusercontent.com/stuttgart-things/tasks/refs/heads/main/git/linting.yaml
   go:
     taskfile: https://raw.githubusercontent.com/stuttgart-things/tasks/refs/heads/main/go/lint.yaml
 
