--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -1,5 +1,4 @@
 name: CI - Dagger Build & Test
-
 on:
   push:
     branches:
@@ -13,8 +12,8 @@ on:
       - fix/*
 
 jobs:
-  dagger-build-test:
-    name: Dagger build-and-test
+  build-and-test:
+    name: build-and-test
     runs-on: ubuntu-latest
 
     permissions:
