--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -23,6 +23,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Dagger lint
+        uses: dagger/dagger-for-github@v8.2.0
+        with:
+          module: ./.dagger
+          call: lint --src . --progress plain
+          # Optional: enable Dagger Cloud traces for richer logs
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+
       - name: Dagger build-and-test
         uses: dagger/dagger-for-github@v8.2.0
         with:
