feat: feat/update-test-ci-kcl-image

--- a/.github/workflows/lint-repo.yaml
+++ b/.github/workflows/lint-repo.yaml
@@ -4,12 +4,12 @@ on:
   push:
     branches:
       - main
-      - feature/*
+      - feat/*
       - fix/*
   pull_request:
     branches:
       - main
-      - feature/*
+      - feat/*
       - fix/*
 
 jobs:
