--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -3,12 +3,12 @@ on:
   push:
     branches:
       - main
-      - feature/*
+      - feat/*
       - fix/*
   pull_request:
     branches:
       - main
-      - feature/*
+      - feat/*
       - fix/*
 
 jobs:
