Fix mkdocs config for TechDocs compatibility

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,5 @@ nav:
   - API Examples: api-examples.md
   - Testing Guide: TESTING_GUIDE.md
 
-theme:
-  name: material
-  palette:
-    primary: indigo
+plugins:
+  - techdocs-core
