--- a/.github/workflows/build-scan-image.yaml
+++ b/.github/workflows/build-scan-image.yaml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - main
+      - feat/*
+      - fix/*
+  pull_request:
+    branches:
+      - main
+      - feat/*
+      - fix/*
     tags:
       - 'v*'
   workflow_dispatch:
