--- a/.github/workflows/build-scan-image.yaml
+++ b/.github/workflows/build-scan-image.yaml
@@ -43,10 +43,11 @@ jobs:
           fi
 
       - name: Build and push image with scan
+        id: build-image
         uses: dagger/dagger-for-github@v8.2.0
         with:
           module: ./.dagger
-          call: build-image --src . --repo "${{ steps.image-repo.outputs.repo }}" --push="true" --scan="true" --scan-severity="HIGH,CRITICAL" --progress plain
+          call: build-image --src . --repo "${{ steps.image-repo.outputs.repo }}" --push "true" --scan "true" --scan-severity "HIGH,CRITICAL" --progress plain
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -55,7 +56,7 @@ jobs:
         uses: dagger/dagger-for-github@v8.2.0
         with:
           module: ./.dagger
-          call: scan-image --image-ref "${{ steps.image-repo.outputs.repo }}:${{ steps.image-repo.outputs.tag }}" --severity "HIGH,CRITICAL" export --path /tmp/trivy-scan-report.json
+          call: scan-image --image-ref "${{ steps.build-image.outputs.stdout }}" --severity "HIGH,CRITICAL" export --path /tmp/trivy-scan-report.json
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
       - name: Upload scan report
