feat: fix/image-pipeline

--- a/.github/workflows/build-scan-image.yaml
+++ b/.github/workflows/build-scan-image.yaml
@@ -47,7 +47,7 @@ jobs:
         uses: dagger/dagger-for-github@v8.2.0
         with:
           module: ./.dagger
-          call: build-image --src . --repo "${{ steps.image-repo.outputs.repo }}" --push "true" --scan "true" --scan-severity "HIGH,CRITICAL" --progress plain
+          call: build-image --src . --repo "${{ steps.image-repo.outputs.repo }}" --push="true" --scan="true" --scan-severity="HIGH,CRITICAL" --progress plain
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
